--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -32,7 +32,8 @@ jobs:
     - name: Build with Maven
       run: |
         mvn clean 
-        mvn -B install 
+        mvn -Dmaven.test.skip=true -B install 
+        mvn -Dmaven.test.skip=true -B package --file pom.xml
 
   unit-test:
     runs-on: ubuntu-latest
@@ -51,3 +52,4 @@ jobs:
       - name: Run unit tests
         run:
             mvn clean test
+
